# django-mfa-toolkit

./: .gitattributes  .gitignore  AGENTS.md  README.md  pyproject.toml  roadmap.json
.docs/: ci-cd.md  django-mfa-toolkit-concept.md
.docs/design/: audit-persistence-contracts.md  control-graph.md  device-persistence-contracts.md  django-otp-compatibility.md  hotp-services.md  mvp-architecture.md  mvp-integration-guide.md  outbound-credential-safety-review.md  recovery-code-support.md  secret-storage.md  security-invariant-checks.md  totp-services.md
.github/workflows/: ci.yml
django_mfa_toolkit/: __init__.py  apps.py  audit.py  device_adapters.py  hotp.py  integration_checks.py  models.py  recovery_codes.py  secret_storage.py  security_invariants.py  session_elevation.py  throttling.py  totp.py
django_mfa_toolkit/migrations/: 0001_initial.py  0002_mfaauditevent.py  0003_recoverycodebatch_recoverycode_and_more.py  0004_mfaauditevent_recovery_code_and_more.py
scripts/: ci-local.sh
tests/: conftest.py  settings.py  test_audit_models.py  test_design_docs.py  test_device_adapters.py  test_django_integration_checks.py  test_hotp.py  test_integration_checks.py  test_models.py  test_recovery_codes.py  test_secret_storage.py  test_security_invariants.py  test_session_elevation.py  test_smoke.py  test_throttling.py  test_totp.py
