[project]
name = "django-mfa-toolkit"
version = "0.1.0"
description = "Agent-native MFA toolkit foundations for Django."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { name = "django-mfa-toolkit contributors" }
]
keywords = ["django", "mfa", "totp", "hotp", "security"]
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Framework :: Django",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Security",
]
dependencies = [
    "cryptography>=49.0.0",
    "pyotp>=2.9.0",
]

[dependency-groups]
dev = [
  "django>=4.2,<6.0",
  "pytest>=8.0",
  "pytest-django>=4.8",
  "pip-audit>=2.7",
]

[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["django_mfa_toolkit"]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "tests.settings"
pythonpath = ["."]
testpaths = ["tests"]
addopts = [
  "--strict-config",
  "--strict-markers",
]
